Add tests, refactor calculator and improve ViewModels hierarchy

--- a/KMeans.Gui/KMeans.Gui.csproj
+++ b/KMeans.Gui/KMeans.Gui.csproj
@@ -47,6 +47,10 @@
       <HintPath>..\packages\PostSharp.Patterns.Common.4.2.23\lib\net45\PostSharp.Patterns.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PostSharp.Patterns.Diagnostics, Version=4.2.23.0, Culture=neutral, PublicKeyToken=e7f631e6ce13f078, processorArchitecture=MSIL">
+      <HintPath>..\packages\PostSharp.Patterns.Diagnostics.4.2.23\lib\net40\PostSharp.Patterns.Diagnostics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PostSharp.Patterns.Model, Version=4.2.23.0, Culture=neutral, PublicKeyToken=e7f631e6ce13f078, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.Patterns.Model.4.2.23\lib\net40\PostSharp.Patterns.Model.dll</HintPath>
       <Private>True</Private>
@@ -105,6 +109,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="KMeans.Gui.psproj" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
