--- a/KMeans.Gui/packages.config
+++ b/KMeans.Gui/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="PostSharp" version="4.2.23" targetFramework="net452" />
   <package id="PostSharp.Patterns.Common" version="4.2.23" targetFramework="net452" />
+  <package id="PostSharp.Patterns.Diagnostics" version="4.2.23" targetFramework="net452" />
   <package id="PostSharp.Patterns.Model" version="4.2.23" targetFramework="net452" />
 </packages>
